Отредактирована справка о системе

--- a/src/main/resources/templates/info-students.html
+++ b/src/main/resources/templates/info-students.html
@@ -61,6 +61,8 @@
     <p style="text-align: center">Разработчики: обучающиеся группы 6413-020302D</p>
     <p style="text-align: center">Вазюкова Галина Сергеевна</p>
     <p style="text-align: center">Андреева Анна Алексеевна</p>
+    <br>
+    <p style="text-align: center">Самара 2021</p>
 </div>
 </body>
 </html>
