--- a/src/main/resources/templates/info-system.html
+++ b/src/main/resources/templates/info-system.html
@@ -3,38 +3,220 @@
 <head>
     <meta charset="UTF-8">
     <title>Тетрис. Информация о системе</title>
-    <link media="all" th:href="@{/css/info.css}" rel="stylesheet" type="text/css"/>
+    <style>
+        @font-face {
+            font-family: 'Roboto';
+            src: url(http://fonts.gstatic.com/s/roboto/v15/mErvLBYg_cXG3rLvUsKT_fesZW2xOQ-xsNqO47m55DA.woff2);
+        }
+
+        html, body {
+            background-image: url("https://cdn-ru0.puzzlegarage.com/img/puzzle/12/178_preview_r.v2.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-attachment: fixed;
+            background-color: #52d7be;
+            height: 100%;
+            margin: 0;
+            font-size: 15px;
+            font-family: Roboto;
+        }
+        .home{
+            position: fixed;
+            margin-top: 5pt;
+            width: 50px;
+            height: 50px;
+            border-radius: 10px;
+            background-image: url("https://img.icons8.com/ios/50/000000/home-page.png");
+            background-repeat: no-repeat;
+            background-color: #77dcff;
+        }
+
+        .wrapper{
+            width: 90%;
+            top: 10%;
+            height: auto;
+            border: 2px solid lightgrey;
+            padding: 15pt;
+            background-color: white;
+            position: relative;
+            left: 50%;
+            transform: translate(-50%, 0);
+            font-size: 16pt;
+        }
+    </style>
 </head>
 <body>
 <a th:href="@{/main}">
-    <div class="menu-item"></div>
+    <div class="home"></div>
 </a>
 <div class ="wrapper">
-    <h1>Игра "Тетрис"</h1>
-    <h2>Информация о системе</h2>
-    <p>Приложение представляет собой расширенную версию классической игры "Тетрис". </p>
-    <p>Приложение позволяет не только играть, но и:</p>
+    <h1 style="text-align: center">Автоматизированная система «Игра «Тетрис» » с функциями администратора</h1>
+    <br>
+    <h2>Назначение системы</h2>
+    <h2>Работа с системой</h2>
+    <h3>Работа с системой в режиме «Игрок»</h3>
+    <h4>Регистрация</h4>
+    <h4>Вход</h4>
+    <h4>Играть в «Тетрис»</h4>
+    <h4>Манипулирование фигурами</h4>
+    <h4>Подсчет результата</h4>
+    <h4>Конец игры</h4>
+    <h4>Настройки игры</h4>
+    <h4>Просмотр статистики</h4>
+    <h3>Работа с системой в режиме «Администратор»</h3>
+    <h4>Работа со стаканами</h4>
+    <h5>Создание/редактирование стакана</h5>
+    <h4>Работа с фигурами</h4>
+    <h5>Создание/редактирование фигуры</h5>
+    <h4>Настройка уровней сложности</h4>
+    <h5>Редактирование списка фигур</h5>
+    <h5>Редактирование стакана</h5>
+    <h5>Редактирование скорости падения фигур</h5>
+    <br>
+    <br>
+    <h2>Назначение системы</h2>
+    <br>
+    <p>Система представляет собой расширенную версию классической игры «Тетрис» с функциями администратора. Система позволяет не только играть в «Тетрис», но и:</p>
     <ul>
-        <li>Создавать новые фигуры</li>
-        <li>Создавать новые стаканы</li>
-        <li>Конфигурировать уровни сложности</li>
-        <li>Настраивать процесс игры</li>
+        <li>Создавать новые фигуры;</li>
+        <li>Создавать новые стаканы;</li>
+        <li>Конфигурировать уровни сложности;</li>
+        <li>Настраивать процесс игры.</li>
     </ul>
-
-    <h2>Правила игры</h2>
-    <p>Тетрис — это очень популярная игра, которая появилась в 80-х. Если вы не знаете, как играть в нее, самое время научиться.</p>
-    <p>Для того, чтобы играть используйте следующую инструкцию:</p>
-    <ul>
-        <li>Настройте параметры игры: выберите способ подсчета очков, и опцию показа сетки и следующей фигуры</li>
-        <li>Выберите уровень сложности: легкий, средний, сложный</li>
-        <li>Начните играть!</li>
-    </ul>
-    <h3>Правила управления фигурами:</h3>
+    <h2>Работа с системой</h2>
+    <br>
+    <p>Для того чтобы авторизоваться в системе, необходимо запустить приложение, после чего откроется экранная форма авторизации. Здесь нужно
+        ввести логин и пароль, затем нажать кнопку «Войти». При успешной авторизации произойдет переход на страницу главного меню, после чего
+        система будет ожидать действий пользователя.</p>
+    <img></img>
+    <br>
+    <h3>Работа с системой в режиме «Игрок»</h3>
+    <br>
+    <h4>Регистрация</h4>
+    <br>
+    <p>Для того, чтобы зарегистрироваться в системе, нужно осуществить первый вход в систему с вводом логина и пароля на странице авторизации.</p>
+    <img></img>
+    <br>
+    <h4>Вход</h4>
+    <br>
+    <p>Для того, чтобы войти в систему, на странице авторизациинужно ввести логин и пароль, затем нажать кнопку «Войти».</p>
+    <img></img>
+    <br>
+    <h4>Играть в «Тетрис»</h4>
+    <br>
+    <p>Для того, чтобы играть в «Тетрис» на странице главного меню нужно нажать на кнопку «Играть». После этого в всплывающем окне необходимо
+        выбрать уровень сложности игры нажатием на одну из кнопок «Легкий», «Средний» или «Сложный». Когда уровень сложности выбран, откроется страница с игрой.</p>
+    <img></img>
+    <img></img>
+    <br>
+    <h4>Манипулирование фигурами</h4>
+    <br>
+    <p>Для того, чтобы манипулировать фигурами, используйте клавиши клавиатуры.</p>
+    <p>Правила управления фигурами:</p>
     <ul>
         <li>Двигайте фигуру с помощью стрелок "вправо" и "влево" на клавиатуре</li>
         <li>Ускоряйте фигуру с помощью стрелки "вниз"</li>
         <li>Крутите фигуру с помощью стрелки "вверх"</li>
     </ul>
+    <br>
+    <h4>Подсчет результата</h4>
+    <br>
+    <p>Подсчет результата производится в том случае, если в настройка не установлено значение "не вести подсчет"</p>
+    <p>При подсчете результата по времени, прошедшее время игры отображается слева от игрового поля.</p>
+    <p>При подсчете результата по очкам, набранные очки отображаются слева от игрового поля. За каждый убраный ряд на игровом поле на «Легком» уровне сложности
+        прибавляется 10 очков, на «Среднем» - 15 очков, на «Сложном» - 20 очков.</p>
+    <img></img>
+    <br>
+    <h4>Конец игры</h4>
+    <br>
+    <p>Игра закончится, когда стакан будет переполнен фигурами. После окончания игры выведется окно с сообщением о конце игры и результатом игры,
+        если в настройка не установлено значение "не вести подсчет".</p>
+    <p>Если был произведен подсчет результатов, то можно сохранить его нажатием на кнопку "Да", после чего произойдет переход на страницу статистики.
+        Если нажать на кнопку "Нет", то результат не будет сохранен и произойдет переход на страницу главного меню.</p>
+    <img></img>
+    <br>
+    <h4>Настройки игры</h4>
+    <br>
+    <p>Для того, чтобы настроить параметры игры, на странице главного меню нужно нажать на кнопку «Настройки». После этого будет открыта страница настроек игры.</p>
+    <p>Для того, чтобы во время игры в «Тетрис» отображалась сетка на игровом поле, необходимо поставить галочку в соответствующем пункте настроек.</p>
+    <p>Для того, чтобы во время игры в «Тетрис» отображалась следующая фигура, необходимо поставить галочку в соответствующем пункте настроек.</p>
+    <p>Для того, чтобы во время игры в «Тетрис» не велся подсчет результат, необходимо в выпадающем меню выбрать пункт "Не вести".
+        Для ведения подсчета результата по времени необходимо в выпадающем меню выбрать пункт "Время". Для ведения подсчета результата по очкам
+        необходимо в выпадающем меню выбрать пункт "Очки".</p>
+    <img></img>
+    <br>
+    <h4>Просмотр статистики</h4>
+    <br>
+    <p>Для того, чтобы посмотреть статистику игр, на странице главного меню нужно нажать на кнопку «Статистика». После этого будет открыта страница статистики.</p>
+    <p>Для того, чтобы посмотреть свою статистику, необходимо нажать кнопку «Моя статистика».</p>
+    <p>Для того, чтобы посмотреть статистику лучших игроков, необходимо нажать кнопку «Лучшие игроки».</p>
+    <p>Для того, чтобы вывести результаты, которые были подсчитаны по очкам, необходимо в выпадающем меню выбрать пункт "Очки".
+        Для того, чтобы вывести результаты, которые были подсчитаны по времени, необходимо в выпадающем меню выбрать пункт "Время"</p>
+    <img></img>
+    <br>
+    <br>
+    <h3>Работа с системой в режиме «Администратор»</h3>
+    <br>
+    <h3>Вход</h3>
+    <br>
+    <p>Для того, чтобы войти в систему, на странице авторизациинужно ввести логин и пароль, затем нажать кнопку «Войти».</p>
+    <img></img>
+    <br>
+    <h4>Работа со стаканами</h4>
+    <br>
+    <p>Для того, чтобы начать работать со стаканами, на странице главного меню нужно нажать на кнопку «Стаканы». После этого будет открыта страница со списком стаканов.</p>
+    <p>Для того, чтобы добавить стакан, необходимо нажать кнопку «Добавить стакан». После этого откроется окно создания стакана.</p>
+    <p>Для того, чтобы удалить стакан, необходимо нажать кнопку с изображением мусорки у соответсвующего стакана.</p>
+    <p>Для того, чтобы редактировать стакан, необходимо нажать кнопку с изображением карандаша у соответсвующего стакана. После этого откроется окно создания стакана.</p>
+    <img></img>
+    <h5>Создание/редактирование стакана</h5>
+    <br>
+    <p>В окне создания/редактирования стакана можно задать/изменить значения ширины и высоты стакана.</p>
+    <p>При нажатии на кнопку «Сохранить», стакан будет сохранен(если такого стакана еще нет), после чего произойдет переход на страницу со списком стаканов.</p>
+    <img></img>
+    <br>
+    <h4>Работа с фигурами</h4>
+    <br>
+    <p>Для того, чтобы начать работать с фигурами, на странице главного меню нужно нажать на кнопку «Фигуры». После этого будет открыта страница со списком фигур.</p>
+    <p>Для того, чтобы добавить фигуру, необходимо нажать кнопку «Добавить фигуру». После этого откроется окно создания фигуры.</p>
+    <p>Для того, чтобы удалить фигуру, необходимо нажать кнопку с изображением мусорки у соответсвующей фигуры.</p>
+    <p>Для того, чтобы редактировать фигуру, необходимо нажать кнопку с изображением карандаша у соответсвующей фигуры. После этого откроется окно создания фигуры.</p>
+    <img></img>
+    <h5>Создание/редактирование фигуры</h5>
+    <br>
+    <p>В окне создания/редактирования фигуры можно задать/изменить форму фигуры. При нажатии на белую клетку в поле 4х4, будет изменен цвет клетки. Цветные клетки
+        составляют фигуру. При нажатии на цветную клетку в поле 4х4, будет изменен цвет клетки на белый.</p>
+    <p>При нажатии на кнопку «Соханить», фигура будет сохранена(если она целая и такой фигуры еще нет), после чего произойдет переход на страницу со списком фигур.</p>
+    <img></img>
+    <h4>Настройка уровней сложности</h4>
+    <br>
+    <p>Для того, чтобы настроить уровень сложности, на странице главного меню нужно нажать на кнопку «Уровни сложности». После этого в всплывающем окне необходимо
+        выбрать уровень сложности игры нажатием на одну из кнопок «Легкий», «Средний» или «Сложный». Когда уровень сложности выбран, откроется страница с настройками
+        уровня сложности.</p>
+    <p>При нажатии на кнопку «Сохранить» на странице настройки уровня сложности система сохраняет установленные настройки и осуществляет переход на страницу главного меню.</p>
+    <img></img>
+    <h5>Редактирование списка фигур</h5>
+    <br>
+    <p>Для того, чтобы отредактировать список фигур на уровне, на странице с настройками уровня нужно нажать на кнопку «Изменить список фигур». После этого будет
+        открыта страница со списком фигур.</p>
+    <p>Для того, чтобы добавить фигуру на уровень, нужно нажатиь на кнопку «Выбрать» у соответствующей фигуры.</p>
+    <p>Для того, чтобы удалить фигуру с уровеня, нужно нажатиь на кнопку «Удалить» у соответствующей фигуры.</p>
+    <p>При нажатии на кнопку «Сохранить» система сохраняет установленный список фигур и осуществляет переход на страницу настройки уровня сложности.</p>
+    <img></img>
+    <h5>Редактирование стакана</h5>
+    <br>
+    <p>Для того, чтобы отредактировать стакан на уровне, на странице с настройками уровня нужно нажать на кнопку «Изменить стакан». После этого будет
+        открыта страница со списком стаканов.</p>
+    <p>Для того, чтобы выбрать стакан для уровеня, нужно нажатиь на кнопку «Выбрать» у соответствующего стакана.</p>
+    <p>При нажатии на кнопку «Сохранить» система сохраняет установленный стакан и осуществляет переход на страницу настройки уровня сложности.</p>
+    <img></img>
+    <h5>Редактирование скорости падения фигур</h5>
+    <br>
+    <p>Для того, чтобы отредактировать скорости падения фигур на уровне, на странице с настройками уровня нужно изменить положение ползунка скорости.
+        Доступные скорости падения: 0.5, 1.0, 1.5, 2.0.</p></p>
+
+    <img></img>
 </div>
 </body>
 </html>
