--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -32,7 +32,7 @@
     <label id="timeLabel"><b>Время:</b></label>
     <p class="time"></p>
     <input id="user" hidden th:value="${username}">
-    <div style="display:flex">
+    <div class="par" style="display:flex">
         <a th:href="@{/statistic}" style="text-decoration: none">
             <div class="saveButton" id="yes">Да</div>
         </a>
