--- a/src/main/resources/templates/info-students.html
+++ b/src/main/resources/templates/info-students.html
@@ -44,6 +44,18 @@
             transform: translate(-50%, 0);
             font-size: 16pt;
         }
+        p{
+            font-size:13pt;
+        }
+        h3{
+            font-size:15pt;
+        }
+        h2{
+            font-size: 18pt;
+        }
+        h1{
+            font-size:23pt;
+        }
     </style>
 </head>
 <body>
