--- a/src/main/resources/templates/info-system.html
+++ b/src/main/resources/templates/info-system.html
@@ -18,7 +18,7 @@
             background-color: #52d7be;
             height: 100%;
             margin: 0;
-            font-size: 15px;
+            font-size: 14px;
             font-family: Roboto;
         }
         .home{
@@ -42,7 +42,10 @@
             position: relative;
             left: 50%;
             transform: translate(-50%, 0);
-            font-size: 16pt;
+            font-size: 14pt;
+        }
+        img{
+            width: 550px;
         }
     </style>
 </head>
@@ -53,29 +56,50 @@
 <div class ="wrapper">
     <h1 style="text-align: center">Автоматизированная система «Игра «Тетрис» » с функциями администратора</h1>
     <br>
-    <h2>Назначение системы</h2>
-    <h2>Работа с системой</h2>
-    <h3>Работа с системой в режиме «Игрок»</h3>
-    <h4>Регистрация</h4>
-    <h4>Вход</h4>
-    <h4>Играть в «Тетрис»</h4>
-    <h4>Манипулирование фигурами</h4>
-    <h4>Подсчет результата</h4>
-    <h4>Конец игры</h4>
-    <h4>Настройки игры</h4>
-    <h4>Просмотр статистики</h4>
-    <h3>Работа с системой в режиме «Администратор»</h3>
-    <h4>Работа со стаканами</h4>
-    <h5>Создание/редактирование стакана</h5>
-    <h4>Работа с фигурами</h4>
-    <h5>Создание/редактирование фигуры</h5>
-    <h4>Настройка уровней сложности</h4>
-    <h5>Редактирование списка фигур</h5>
-    <h5>Редактирование стакана</h5>
-    <h5>Редактирование скорости падения фигур</h5>
+    <ul>
+        <li><a href="#nazn">Назначение системы</a></li>
+        <li><a href="#rabsys">Работа с системой</a>
+            <ul>
+                <li><a href="#player">Работа с системой в режиме «Игрок»</a>
+                    <ul>
+                        <li><a href="#registr">Регистрация</a></li>
+                        <li><a href="#auth">Вход</a></li>
+                        <li><a href="#play">Играть в «Тетрис»</a></li>
+                        <li><a href="#manip">Манипулирование фигурами</a></li>
+                        <li><a href="#res">Подсчет результата</a></li>
+                        <li><a href="#end">Конец игры</a></li>
+                        <li><a href="#sett">Настройки игры</a></li>
+                        <li><a href="#statt">Просмотр статистики</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#adm">Работа с системой в режиме «Администратор»</a>
+                    <ul>
+                        <li><a href="#gl">Работа со стаканами</a>
+                            <ul>
+                                <li><a href="#edgl">Создание/редактирование стакана</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#figs">Работа с фигурами</a>
+                            <ul>
+                                <li><a href="#editfig">Создание/редактирование фигуры</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#setlev">Настройка уровней сложности</a>
+                            <ul>
+                                <li><a href="#edfiglev">Редактирование списка фигур</a></li>
+                                <li><a href="#edgllev">Редактирование стакана</a></li>
+                                <li><a href="#edspeed">Редактирование скорости падения фигур</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+    </ul>
     <br>
     <br>
-    <h2>Назначение системы</h2>
+    <h2 id="nazn">Назначение системы</h2>
     <br>
     <p>Система представляет собой расширенную версию классической игры «Тетрис» с функциями администратора. Система позволяет не только играть в «Тетрис», но и:</p>
     <ul>
@@ -84,33 +108,33 @@
         <li>Конфигурировать уровни сложности;</li>
         <li>Настраивать процесс игры.</li>
     </ul>
-    <h2>Работа с системой</h2>
+    <h2 id="rabsyst">Работа с системой</h2>
     <br>
     <p>Для того чтобы авторизоваться в системе, необходимо запустить приложение, после чего откроется экранная форма авторизации. Здесь нужно
         ввести логин и пароль, затем нажать кнопку «Войти». При успешной авторизации произойдет переход на страницу главного меню, после чего
         система будет ожидать действий пользователя.</p>
-    <img></img>
+    <img src="/img/auth.png"></img>
     <br>
-    <h3>Работа с системой в режиме «Игрок»</h3>
+    <h3 id="player">Работа с системой в режиме «Игрок»</h3>
     <br>
-    <h4>Регистрация</h4>
+    <h4 id="regist">Регистрация</h4>
     <br>
     <p>Для того, чтобы зарегистрироваться в системе, нужно осуществить первый вход в систему с вводом логина и пароля на странице авторизации.</p>
     <img></img>
     <br>
-    <h4>Вход</h4>
+    <h4 id="auth">Вход</h4>
     <br>
     <p>Для того, чтобы войти в систему, на странице авторизациинужно ввести логин и пароль, затем нажать кнопку «Войти».</p>
     <img></img>
     <br>
-    <h4>Играть в «Тетрис»</h4>
+    <h4 id="play">Играть в «Тетрис»</h4>
     <br>
     <p>Для того, чтобы играть в «Тетрис» на странице главного меню нужно нажать на кнопку «Играть». После этого в всплывающем окне необходимо
         выбрать уровень сложности игры нажатием на одну из кнопок «Легкий», «Средний» или «Сложный». Когда уровень сложности выбран, откроется страница с игрой.</p>
     <img></img>
     <img></img>
     <br>
-    <h4>Манипулирование фигурами</h4>
+    <h4 id="manip">Манипулирование фигурами</h4>
     <br>
     <p>Для того, чтобы манипулировать фигурами, используйте клавиши клавиатуры.</p>
     <p>Правила управления фигурами:</p>
@@ -120,7 +144,7 @@
         <li>Крутите фигуру с помощью стрелки "вверх"</li>
     </ul>
     <br>
-    <h4>Подсчет результата</h4>
+    <h4 id="res">Подсчет результата</h4>
     <br>
     <p>Подсчет результата производится в том случае, если в настройка не установлено значение "не вести подсчет"</p>
     <p>При подсчете результата по времени, прошедшее время игры отображается слева от игрового поля.</p>
@@ -128,7 +152,7 @@
         прибавляется 10 очков, на «Среднем» - 15 очков, на «Сложном» - 20 очков.</p>
     <img></img>
     <br>
-    <h4>Конец игры</h4>
+    <h4 id="end">Конец игры</h4>
     <br>
     <p>Игра закончится, когда стакан будет переполнен фигурами. После окончания игры выведется окно с сообщением о конце игры и результатом игры,
         если в настройка не установлено значение "не вести подсчет".</p>
@@ -136,7 +160,7 @@
         Если нажать на кнопку "Нет", то результат не будет сохранен и произойдет переход на страницу главного меню.</p>
     <img></img>
     <br>
-    <h4>Настройки игры</h4>
+    <h4 id="sett">Настройки игры</h4>
     <br>
     <p>Для того, чтобы настроить параметры игры, на странице главного меню нужно нажать на кнопку «Настройки». После этого будет открыта страница настроек игры.</p>
     <p>Для того, чтобы во время игры в «Тетрис» отображалась сетка на игровом поле, необходимо поставить галочку в соответствующем пункте настроек.</p>
@@ -146,7 +170,7 @@
         необходимо в выпадающем меню выбрать пункт "Очки".</p>
     <img></img>
     <br>
-    <h4>Просмотр статистики</h4>
+    <h4 id="statt">Просмотр статистики</h4>
     <br>
     <p>Для того, чтобы посмотреть статистику игр, на странице главного меню нужно нажать на кнопку «Статистика». После этого будет открыта страница статистики.</p>
     <p>Для того, чтобы посмотреть свою статистику, необходимо нажать кнопку «Моя статистика».</p>
@@ -156,47 +180,47 @@
     <img></img>
     <br>
     <br>
-    <h3>Работа с системой в режиме «Администратор»</h3>
+    <h3 id="adm">Работа с системой в режиме «Администратор»</h3>
     <br>
     <h3>Вход</h3>
     <br>
     <p>Для того, чтобы войти в систему, на странице авторизациинужно ввести логин и пароль, затем нажать кнопку «Войти».</p>
     <img></img>
     <br>
-    <h4>Работа со стаканами</h4>
+    <h4 id="gl">Работа со стаканами</h4>
     <br>
     <p>Для того, чтобы начать работать со стаканами, на странице главного меню нужно нажать на кнопку «Стаканы». После этого будет открыта страница со списком стаканов.</p>
     <p>Для того, чтобы добавить стакан, необходимо нажать кнопку «Добавить стакан». После этого откроется окно создания стакана.</p>
     <p>Для того, чтобы удалить стакан, необходимо нажать кнопку с изображением мусорки у соответсвующего стакана.</p>
     <p>Для того, чтобы редактировать стакан, необходимо нажать кнопку с изображением карандаша у соответсвующего стакана. После этого откроется окно создания стакана.</p>
     <img></img>
-    <h5>Создание/редактирование стакана</h5>
+    <h5 id="edgl">Создание/редактирование стакана</h5>
     <br>
     <p>В окне создания/редактирования стакана можно задать/изменить значения ширины и высоты стакана.</p>
     <p>При нажатии на кнопку «Сохранить», стакан будет сохранен(если такого стакана еще нет), после чего произойдет переход на страницу со списком стаканов.</p>
     <img></img>
     <br>
-    <h4>Работа с фигурами</h4>
+    <h4 id="figs">Работа с фигурами</h4>
     <br>
     <p>Для того, чтобы начать работать с фигурами, на странице главного меню нужно нажать на кнопку «Фигуры». После этого будет открыта страница со списком фигур.</p>
     <p>Для того, чтобы добавить фигуру, необходимо нажать кнопку «Добавить фигуру». После этого откроется окно создания фигуры.</p>
     <p>Для того, чтобы удалить фигуру, необходимо нажать кнопку с изображением мусорки у соответсвующей фигуры.</p>
     <p>Для того, чтобы редактировать фигуру, необходимо нажать кнопку с изображением карандаша у соответсвующей фигуры. После этого откроется окно создания фигуры.</p>
     <img></img>
-    <h5>Создание/редактирование фигуры</h5>
+    <h5 id="editfig">Создание/редактирование фигуры</h5>
     <br>
     <p>В окне создания/редактирования фигуры можно задать/изменить форму фигуры. При нажатии на белую клетку в поле 4х4, будет изменен цвет клетки. Цветные клетки
         составляют фигуру. При нажатии на цветную клетку в поле 4х4, будет изменен цвет клетки на белый.</p>
     <p>При нажатии на кнопку «Соханить», фигура будет сохранена(если она целая и такой фигуры еще нет), после чего произойдет переход на страницу со списком фигур.</p>
     <img></img>
-    <h4>Настройка уровней сложности</h4>
+    <h4 id="setlev">Настройка уровней сложности</h4>
     <br>
     <p>Для того, чтобы настроить уровень сложности, на странице главного меню нужно нажать на кнопку «Уровни сложности». После этого в всплывающем окне необходимо
         выбрать уровень сложности игры нажатием на одну из кнопок «Легкий», «Средний» или «Сложный». Когда уровень сложности выбран, откроется страница с настройками
         уровня сложности.</p>
     <p>При нажатии на кнопку «Сохранить» на странице настройки уровня сложности система сохраняет установленные настройки и осуществляет переход на страницу главного меню.</p>
     <img></img>
-    <h5>Редактирование списка фигур</h5>
+    <h5 id="edfiglev">Редактирование списка фигур</h5>
     <br>
     <p>Для того, чтобы отредактировать список фигур на уровне, на странице с настройками уровня нужно нажать на кнопку «Изменить список фигур». После этого будет
         открыта страница со списком фигур.</p>
@@ -204,14 +228,14 @@
     <p>Для того, чтобы удалить фигуру с уровеня, нужно нажатиь на кнопку «Удалить» у соответствующей фигуры.</p>
     <p>При нажатии на кнопку «Сохранить» система сохраняет установленный список фигур и осуществляет переход на страницу настройки уровня сложности.</p>
     <img></img>
-    <h5>Редактирование стакана</h5>
+    <h5 id="edgllev">Редактирование стакана</h5>
     <br>
     <p>Для того, чтобы отредактировать стакан на уровне, на странице с настройками уровня нужно нажать на кнопку «Изменить стакан». После этого будет
         открыта страница со списком стаканов.</p>
     <p>Для того, чтобы выбрать стакан для уровеня, нужно нажатиь на кнопку «Выбрать» у соответствующего стакана.</p>
     <p>При нажатии на кнопку «Сохранить» система сохраняет установленный стакан и осуществляет переход на страницу настройки уровня сложности.</p>
     <img></img>
-    <h5>Редактирование скорости падения фигур</h5>
+    <h5 id="edspeed">Редактирование скорости падения фигур</h5>
     <br>
     <p>Для того, чтобы отредактировать скорости падения фигур на уровне, на странице с настройками уровня нужно изменить положение ползунка скорости.
         Доступные скорости падения: 0.5, 1.0, 1.5, 2.0.</p></p>
