--- a/src/main/resources/static/css/glasses-in-level.css
+++ b/src/main/resources/static/css/glasses-in-level.css
@@ -60,6 +60,7 @@ html, body {
     padding: 15px 20px;
     cursor: pointer;
     width: 200px;
+    font-size: 16pt;
     text-align:center;
     font-weight: bold;
     margin-top: 5pt;
