--- a/src/main/resources/templates/info-system.html
+++ b/src/main/resources/templates/info-system.html
@@ -45,7 +45,10 @@
             font-size: 14pt;
         }
         img{
-            width: 550px;
+            width: 700px;
+            position: relative;
+            left: 50%;
+            transform: translate(-50%, 0);
         }
     </style>
 </head>
@@ -113,26 +116,29 @@
     <p>Для того чтобы авторизоваться в системе, необходимо запустить приложение, после чего откроется экранная форма авторизации. Здесь нужно
         ввести логин и пароль, затем нажать кнопку «Войти». При успешной авторизации произойдет переход на страницу главного меню, после чего
         система будет ожидать действий пользователя.</p>
-    <img src="/img/auth.png"></img>
+    <img src="/img/auth.png" style="border: 1pt solid black"></img>
     <br>
     <h3 id="player">Работа с системой в режиме «Игрок»</h3>
     <br>
     <h4 id="regist">Регистрация</h4>
     <br>
     <p>Для того, чтобы зарегистрироваться в системе, нужно осуществить первый вход в систему с вводом логина и пароля на странице авторизации.</p>
-    <img></img>
+    <img src="/img/auth.png" style="border: 1pt solid black"></img>
     <br>
     <h4 id="auth">Вход</h4>
     <br>
     <p>Для того, чтобы войти в систему, на странице авторизациинужно ввести логин и пароль, затем нажать кнопку «Войти».</p>
-    <img></img>
+    <img src="/img/auth.png" style="border: 1pt solid black" ></img>
     <br>
     <h4 id="play">Играть в «Тетрис»</h4>
     <br>
     <p>Для того, чтобы играть в «Тетрис» на странице главного меню нужно нажать на кнопку «Играть». После этого в всплывающем окне необходимо
         выбрать уровень сложности игры нажатием на одну из кнопок «Легкий», «Средний» или «Сложный». Когда уровень сложности выбран, откроется страница с игрой.</p>
-    <img></img>
-    <img></img>
+    <img src="/img/player_main.png"style="border: 1pt solid black" ></img>
+    <br>
+    <img src="/img/choose_lvl.png" style="border: 1pt solid black"></img>
+    <br>
+    <img src="/img/game.png" style="border: 1pt solid black"></img>
     <br>
     <h4 id="manip">Манипулирование фигурами</h4>
     <br>
@@ -150,7 +156,7 @@
     <p>При подсчете результата по времени, прошедшее время игры отображается слева от игрового поля.</p>
     <p>При подсчете результата по очкам, набранные очки отображаются слева от игрового поля. За каждый убраный ряд на игровом поле на «Легком» уровне сложности
         прибавляется 10 очков, на «Среднем» - 15 очков, на «Сложном» - 20 очков.</p>
-    <img></img>
+    <img src="/img/game.png" style="border: 1pt solid black"></img>
     <br>
     <h4 id="end">Конец игры</h4>
     <br>
@@ -158,7 +164,7 @@
         если в настройка не установлено значение "не вести подсчет".</p>
     <p>Если был произведен подсчет результатов, то можно сохранить его нажатием на кнопку "Да", после чего произойдет переход на страницу статистики.
         Если нажать на кнопку "Нет", то результат не будет сохранен и произойдет переход на страницу главного меню.</p>
-    <img></img>
+    <img src="/img/game_over.png" style="border: 1pt solid black"></img>
     <br>
     <h4 id="sett">Настройки игры</h4>
     <br>
@@ -168,7 +174,7 @@
     <p>Для того, чтобы во время игры в «Тетрис» не велся подсчет результат, необходимо в выпадающем меню выбрать пункт "Не вести".
         Для ведения подсчета результата по времени необходимо в выпадающем меню выбрать пункт "Время". Для ведения подсчета результата по очкам
         необходимо в выпадающем меню выбрать пункт "Очки".</p>
-    <img></img>
+    <img src="/img/settings.png" style="border: 1pt solid black"></img>
     <br>
     <h4 id="statt">Просмотр статистики</h4>
     <br>
@@ -177,7 +183,7 @@
     <p>Для того, чтобы посмотреть статистику лучших игроков, необходимо нажать кнопку «Лучшие игроки».</p>
     <p>Для того, чтобы вывести результаты, которые были подсчитаны по очкам, необходимо в выпадающем меню выбрать пункт "Очки".
         Для того, чтобы вывести результаты, которые были подсчитаны по времени, необходимо в выпадающем меню выбрать пункт "Время"</p>
-    <img></img>
+    <img src="/img/statictic.png" style="border: 1pt solid black"></img>
     <br>
     <br>
     <h3 id="adm">Работа с системой в режиме «Администратор»</h3>
@@ -185,7 +191,7 @@
     <h3>Вход</h3>
     <br>
     <p>Для того, чтобы войти в систему, на странице авторизациинужно ввести логин и пароль, затем нажать кнопку «Войти».</p>
-    <img></img>
+    <img src="/img/auth.png" style="border: 1pt solid black"></img>
     <br>
     <h4 id="gl">Работа со стаканами</h4>
     <br>
@@ -193,12 +199,12 @@
     <p>Для того, чтобы добавить стакан, необходимо нажать кнопку «Добавить стакан». После этого откроется окно создания стакана.</p>
     <p>Для того, чтобы удалить стакан, необходимо нажать кнопку с изображением мусорки у соответсвующего стакана.</p>
     <p>Для того, чтобы редактировать стакан, необходимо нажать кнопку с изображением карандаша у соответсвующего стакана. После этого откроется окно создания стакана.</p>
-    <img></img>
-    <h5 id="edgl">Создание/редактирование стакана</h5>
+    <img src="/img/glasses.png" style="border: 1pt solid black"></img>
+    <h4 id="edgl">Создание/редактирование стакана</h4>
     <br>
     <p>В окне создания/редактирования стакана можно задать/изменить значения ширины и высоты стакана.</p>
     <p>При нажатии на кнопку «Сохранить», стакан будет сохранен(если такого стакана еще нет), после чего произойдет переход на страницу со списком стаканов.</p>
-    <img></img>
+    <img src="/img/change_glass.png" style="border: 1pt solid black"></img>
     <br>
     <h4 id="figs">Работа с фигурами</h4>
     <br>
@@ -206,41 +212,40 @@
     <p>Для того, чтобы добавить фигуру, необходимо нажать кнопку «Добавить фигуру». После этого откроется окно создания фигуры.</p>
     <p>Для того, чтобы удалить фигуру, необходимо нажать кнопку с изображением мусорки у соответсвующей фигуры.</p>
     <p>Для того, чтобы редактировать фигуру, необходимо нажать кнопку с изображением карандаша у соответсвующей фигуры. После этого откроется окно создания фигуры.</p>
-    <img></img>
-    <h5 id="editfig">Создание/редактирование фигуры</h5>
+    <img src="/img/figures.png" style="border: 1pt solid black"></img>
+    <h4 id="editfig">Создание/редактирование фигуры</h4>
     <br>
     <p>В окне создания/редактирования фигуры можно задать/изменить форму фигуры. При нажатии на белую клетку в поле 4х4, будет изменен цвет клетки. Цветные клетки
         составляют фигуру. При нажатии на цветную клетку в поле 4х4, будет изменен цвет клетки на белый.</p>
     <p>При нажатии на кнопку «Соханить», фигура будет сохранена(если она целая и такой фигуры еще нет), после чего произойдет переход на страницу со списком фигур.</p>
-    <img></img>
+    <img src="/img/change_figure.png" style="border: 1pt solid black"></img>
     <h4 id="setlev">Настройка уровней сложности</h4>
     <br>
     <p>Для того, чтобы настроить уровень сложности, на странице главного меню нужно нажать на кнопку «Уровни сложности». После этого в всплывающем окне необходимо
         выбрать уровень сложности игры нажатием на одну из кнопок «Легкий», «Средний» или «Сложный». Когда уровень сложности выбран, откроется страница с настройками
         уровня сложности.</p>
     <p>При нажатии на кнопку «Сохранить» на странице настройки уровня сложности система сохраняет установленные настройки и осуществляет переход на страницу главного меню.</p>
-    <img></img>
-    <h5 id="edfiglev">Редактирование списка фигур</h5>
+    <img src="/img/set_lvl.png" style="border: 1pt solid black"></img>
+    <h4 id="edfiglev">Редактирование списка фигур</h4>
     <br>
     <p>Для того, чтобы отредактировать список фигур на уровне, на странице с настройками уровня нужно нажать на кнопку «Изменить список фигур». После этого будет
         открыта страница со списком фигур.</p>
     <p>Для того, чтобы добавить фигуру на уровень, нужно нажатиь на кнопку «Выбрать» у соответствующей фигуры.</p>
     <p>Для того, чтобы удалить фигуру с уровеня, нужно нажатиь на кнопку «Удалить» у соответствующей фигуры.</p>
     <p>При нажатии на кнопку «Сохранить» система сохраняет установленный список фигур и осуществляет переход на страницу настройки уровня сложности.</p>
-    <img></img>
-    <h5 id="edgllev">Редактирование стакана</h5>
+    <img src="/img/set_lvl_fig.png" style="border: 1pt solid black"></img>
+    <h4 id="edgllev">Редактирование стакана</h4>
     <br>
     <p>Для того, чтобы отредактировать стакан на уровне, на странице с настройками уровня нужно нажать на кнопку «Изменить стакан». После этого будет
         открыта страница со списком стаканов.</p>
     <p>Для того, чтобы выбрать стакан для уровеня, нужно нажатиь на кнопку «Выбрать» у соответствующего стакана.</p>
     <p>При нажатии на кнопку «Сохранить» система сохраняет установленный стакан и осуществляет переход на страницу настройки уровня сложности.</p>
-    <img></img>
-    <h5 id="edspeed">Редактирование скорости падения фигур</h5>
+    <img src="/img/set_lvl_glass.png" style="border: 1pt solid black"></img>
+    <h4 id="edspeed">Редактирование скорости падения фигур</h4>
     <br>
     <p>Для того, чтобы отредактировать скорости падения фигур на уровне, на странице с настройками уровня нужно изменить положение ползунка скорости.
         Доступные скорости падения: 0.5, 1.0, 1.5, 2.0.</p></p>
-
-    <img></img>
+    <img src="/img/set_lvl.png" style="border: 1pt solid black"></img>
 </div>
 </body>
 </html>
